# dasch-service-platform

./: .bazelrc  .gitignore  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/workflows/: main.yml
docs/includes/: _admin-service.md
docs/services/metadata/: api-example.puml  datamodel.md  domain-entities.mmd  domain-entities.puml  example.json  schema-metadata.json
public/: BUILD.bazel  global.css  index.html
public/admin/: index.html
services/admin/backend/api/handler/: BUILD.bazel  project.go
services/admin/backend/api/middleware/: cors.go
services/admin/backend/api/presenter/: project.go
services/admin/backend/cmd/: BUILD.bazel  main.go
services/admin/backend/entity/: BUILD.bazel  user.go  user_test.go
services/admin/backend/entity/organization/: BUILD.bazel
services/admin/backend/entity/project/: error.go  project.go  project_test.go
services/admin/backend/entity/user/: BUILD.bazel
services/admin/backend/event/: BUILD.bazel  project.go  user.go
services/admin/backend/infrastructure/repository/: BUILD.bazel  user_badgerdb.go  user_inmem.go
services/admin/backend/infrastructure/repository/eventstore/: BUILD.bazel  container_test.go  user.go  user_test.go
services/admin/backend/infrastructure/repository/project/: BUILD.bazel  project.go  project_test.go
services/admin/backend/infrastructure/repository/user/: BUILD.bazel  user_test.go
services/admin/backend/service/organization/: BUILD.bazel
services/admin/backend/service/project/: inmem_test.go  interface.go  project.go  project_test.go
services/admin/backend/service/user/: BUILD.bazel
services/admin/backend/usecase/user/: BUILD.bazel  interface.go  service.go  service_test.go
services/admin/backend/usecase/user/testing/: BUILD.bazel  inmem.go
services/admin/frontend/: Header.svelte  ProjectPage.svelte  Projects.svelte  store.ts
services/admin/frontend/Modal/: Content.svelte  Dialog.svelte
services/metadata/backend/: BUILD.bazel  README.md  go.mod  main.go
services/metadata/backend/api/: BUILD.bazel  main.go
services/metadata/backend/api/handler/: BUILD.bazel
services/metadata/backend/api/middleware/: BUILD.bazel  metrics.go
services/metadata/backend/api/presenter/: organization.go
services/metadata/backend/cmd/: BUILD.bazel  main.go
services/metadata/backend/data/: BUILD.bazel  db.json
services/metadata/backend/entity/: BUILD.bazel  address.go  entity.go  error.go  organization.go  organization_test.go  person.go
services/metadata/backend/fake-backend/: BUILD.bazel  fake-backend.go
services/metadata/backend/fake-backend/data/: beol-metadata.json  cache-metadata.json  drawings-metadata.json  geoarch-metadata.json  hdm-metadata.json  limc-metadata.json  mfmps-metadata.json  olympic-metadata.json  reforme-geneve-metadata.json  religious-speech-metadata.json  rosetta-metadata.json  roud-metadata.json  stardom-metadata.json  sumer-metadata.json  tds-metadata.json  wordweb-metadata.json
services/metadata/backend/infrastructure/repository/: BUILD.bazel
services/metadata/backend/usecase/organization/: BUILD.bazel
services/metadata/backend/usecase/organization/testing/: BUILD.bazel
services/metadata/docker/: BUILD.bazel
services/metadata/frontend/: App.svelte  BurgerButton.svelte  Button.svelte  CookiesBanner.svelte  CookiesModal.svelte  Footer.svelte  GTag.svelte  Header.svelte  Matomo.svelte  Menu.svelte  Snackbar.svelte  cookies-service.ts  interfaces.ts  routes.js  store.ts  stores.ts
services/metadata/frontend/content/: Category.svelte  Content.svelte  Pagination.svelte  ProjectPage.svelte  Tile.svelte  project-service.ts  stores.ts
services/metadata/frontend/project-page/: AnotherWidget.svelte  CiteAsWidget.svelte  ContactWidget.svelte  DatasetsWidget.svelte  DefaultTabComponent.svelte  DownloadWidget.svelte  KeywordsWidget.svelte  ProjectPage.svelte  ProjectWidget.svelte  Tab.svelte
services/metadata/frontend/projects-repository/: Category.svelte  Pagination.svelte  ProjectsRepository.svelte  Tile.svelte
services/resource/backend/: README.md
shared/go/pkg/metric/: BUILD.bazel
shared/go/pkg/server/: BUILD.bazel  api_spa_server.go  api_spa_server_test.go
shared/go/pkg/server-manual-testing/: main.go  test.rest
shared/go/pkg/valueobject/: BUILD.bazel  description.go  email.go  email_test.go  longname.go  shortcode.go  shortcode_test.go  shortname.go  timestamp.go  timestamp_test.go
