load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push",
    image = "//services/metadata/backend:main_image",
    format = "Docker",
    registry = "index.docker.io",
    repository = "daschswiss/dsp-metadata-service",
    tag = "{BUILD_SCM_TAG}"
)
