package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    data = [
        "//public",
        "//services/metadata/backend/data",
        "//services/metadata/backend/usecase/organization",
        "//services/metadata/backend/infrastructure/repository",
        "//services/metadata/backend/pkg/metric",
        "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_gorilla_context//:context",
        "@com_github_gorilla_mux//:mux",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["main.go"],
    data = [
        "//public",
        "//services/metadata/backend/data",
        "//services/metadata/backend/usecase/organization",
        "//services/metadata/backend/infrastructure/repository",
        "//services/metadata/backend/pkg/metric",
        "@com_github_dgraph_io_badger_v3//:badger",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)
