package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "cmd",
    srcs = ["main.go"],
    data = [
        "//public",
        "//services/metadata/backend/data",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    srcs = ["main.go"],
    data = [
        "//public",
        "//services/metadata/backend/data",
    ],
)
