load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "entity.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/entity",
    deps = [
        "@com_github_google_uuid//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "person",
    srcs = [
        "person.go",
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/metadata/backend/person",
    deps = [
        ":entity",
    ],
    visibility = ["//visibility:public"],
)
