load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "eventstore",
    srcs = [
        "user.go"
    ],
    importpath = "github.com/dasch-swiss/dasch-service-platform/services/admin/backend/infrastructure/repository/eventstore",
    visibility = ["//services/admin/backend:__subpackages__"],
    deps = [
        "//services/admin/backend/entity",
        "//services/admin/backend/event",
        "@com_github_eventstore_eventstore_client_go//client",
        "@com_github_eventstore_eventstore_client_go//direction",
        "@com_github_eventstore_eventstore_client_go//messages",
        "@com_github_eventstore_eventstore_client_go//streamrevision",
        "@com_github_gofrs_uuid//:go_default_library"
    ],
)

go_test(
    name = "eventstore_test",
    srcs = [
        "container_test.go",
        "user_test.go"
    ],
    embed = [":eventstore"],
    size = "small",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_eventstore_eventstore_client_go//direction",
        "@com_github_eventstore_eventstore_client_go//streamrevision",
        "@com_github_ory_dockertest_v3//:go_default_library",
        "@com_github_stretchr_testify//assert"

    ],
)
